2021-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/gendocs_template: Use our own gendocs.sh template.

2021-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Structured Integers): New section.

2021-02-24  Indu Bhagat  <indu.bhagat@oracle.com>

	* utils/pk-elfextractor.in: use get_section_name instead of get_string.

2021-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Maps and Map-files): New chapter.
	(Editing using Variables): New section.
	(poke Maps): Likewise.
	(Loading Maps): Likewise.
	(Multiple Maps): Likewise.
	(Auto-map): Likewise.
	(Constructing Maps): Likewise.
	(Predefined Maps): Likewise.

2021-02-23  Indu Bhagat  <indu.bhagat@oracle.com>

	* doc/poke.texi: fix minor typos.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Print version even with no hand.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change version to 0.91.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (lookup_color_code): Define only #if
	HAVE_TEXTSTYLE_ACCESSORS_SUPPORT.
	(register_color): Likewise.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Fix detection of overflow in signed integer
	literals.
	* testsuite/poke.pkl/cdiv-integers-overflow-2.pk: Update test.
	* testsuite/poke.pkl/neg-int-overflow-diag-2.pk: Likewise.
	* testsuite/poke.pkl/sub-integers-overflow-diag-2.pk: Likewise.
	* testsuite/poke.pkl/sub-integers-overflow-2.pk: Likewise.
	* testsuite/poke.pkl/neg-int-overflow-2.pk: Likewise.
	* testsuite/poke.pkl/mod-integers-overflow-2.pk: Likewise.
	* testsuite/poke.pkl/div-integers-overflow-diag-1.pk: Likewise.
	* testsuite/poke.pkl/div-integers-overflow-2.pk: Likewise.
	* testsuite/poke.libpoke/pk_equal_uint.test: Likewise.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke-tmpdir): New procedure.
	* testsuite/poke.repl/repl.exp: Do not rely on Tcl 8.6.

2021-02-23  Jose E. Marchesi  <jemarch@gnu.org>
